@@ -671,6 +671,7 @@ typedef int rlim_t;
 #define MAXSOCKETS 4096
 #define USE_OS2_SCOREBOARD
 #define NO_RELIABLE_PIPED_LOGS
+#define USE_OS2SEM_SERIALIZED_ACCEPT
 
 #elif defined(__MACHTEN__)
 typedef int rlim_t;
